--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<a href="/"><h3>CLIFF TOP</h3></a>
 						<hr>
 						<p>Two and three room beautiful apartments in Kohsar with available parking provided to the residents. Cliff Top aims to give you the best location for your home at an afforable price.</p>
-						<button>COMPLETED</button>
+						<button>UPCOMING</button>
 					</div>
 				</div>
 				<div class="projects__content--right">
@@ -212,10 +212,10 @@
 						<img class="shiftleft" src="Gallery/tulip2.jpg" alt="projects__right.webp">
 					</div>
 					<div class="projects__content--right--text">
-						<a href="/"><h3>KOHSAR ICON</h3></a>
+						<a href="/"><h3>TULIP TOWER</h3></a>
 						<hr>
-						<p>The biggest housing scheme ever launched in Kohsar, Kohsar Icon offers an outstanding location for your home and a beautiful scenery for you to enjoy in at affordable prices with a favorable installment plan.</p>
-						<button>KNOW MORE</button>
+						<p>Tulip Tower has many things to offer, among some of which are great location, an affordable lease plan that won't burden your finances and all the facilities present </p>
+						<button>COMPLETED</button>
 					</div>
 				</div>
 
@@ -230,9 +230,9 @@
 						<img src="gallery/clifftop2.jpg" alt="projects__left.webp">
 					</div>
 					<div class="projects__content--left--text">
-						<a href="/"><h3>CLIFF TOP</h3></a>
+						<a href="/"><h3>OASIS APARTMENTS</h3></a>
 						<hr>
-						<p>Two and three room beautiful apartments in Kohsar with available parking provided to the residents. Cliff Top aims to give you the best location for your home at an afforable price.</p>
+						<p>The first housing project in Kohsar, OASIS Apartments have provided residents of Kohsar with excellent homes at very affordable prices.</p>
 						<button>COMPLETED</button>
 					</div>
 				</div>
@@ -242,10 +242,10 @@
 						<img class="shiftleft" src="Gallery/tulip2.jpg" alt="projects__right.webp">
 					</div>
 					<div class="projects__content--right--text">
-						<a href="/"><h3>KOHSAR ICON</h3></a>
+						<a href="/"><h3>ROYAL RESIDENCY</h3></a>
 						<hr>
-						<p>The biggest housing scheme ever launched in Kohsar, Kohsar Icon offers an outstanding location for your home and a beautiful scenery for you to enjoy in at affordable prices with a favorable installment plan.</p>
-						<button>KNOW MORE</button>
+						<p>Beautiful design and a marvel of arctitecture, Royal Residency has good homes to offer with available parking for your vehicles and a beautiful scenery for you to enjoy from your balcony.</p>
+						<button>COMPLETED</button>
 					</div>
 				</div>
 
@@ -261,9 +261,9 @@
 						<img src="gallery/clifftop2.jpg" alt="projects__left.webp">
 					</div>
 					<div class="projects__content--left--text">
-						<a href="/"><h3>CLIFF TOP</h3></a>
+						<a href="/"><h3>BUNGALOWS</h3></a>
 						<hr>
-						<p>Two and three room beautiful apartments in Kohsar with available parking provided to the residents. Cliff Top aims to give you the best location for your home at an afforable price.</p>
+						<p>Looking for a house instead of an apartment? Don't worry! Hassan Construction Company has also built amazing bungalows with marvellous interior designing for your home.</p>
 						<button>COMPLETED</button>
 					</div>
 				</div>
@@ -289,10 +289,10 @@
 		<div class="services">
 			<div class="first">
 				<div class="first__text">
-					<h2>DREAM VIEW</h2>
+					<h2>GATEWAY HOUSING SCHEME</h2>
 					<hr>
 					<p>
-						YAHA EXPLAIN KAR Started in 2001, Hassan Construction Company has built outstanding residency projects in Kohsar, Hyderabad. Some of our successful projects include OASIS Apartments, Beautiful Homes, Tulip Tower and Royal Residency. Following our great success in Kohsar, we have also opened a new head office in Mirpurkhas and our launching our new scheme with the name of Gateway Dreamland.
+						"Gateway Housing Scheme" is a housing scheme which is split up in various types of plots. This amazing site that is allocated in 125, 167, 200 sqyds. plots and comprising of hi-fi living and business planning. On the other hand if you are willing to contruct your own home on the bought plot as per predefined bungalows structure by "Hassan Construction Co. Builders & Developers", you are eligible to do it unconscientiously at all.
 					</p>
 				</div>
 				<div class="first__image__new">
@@ -326,7 +326,7 @@
 			</div>
 			
 			<p class="footer__location">
-				BC Knowledge Park, Suddagunte Palya, Bengaluru, Karnataka 560029
+				A1 1 to 6 HDA Housing Scheme V General Public Kohsar
 			</p>
 			<hr>
 		</footer>
