--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-	<div class="wrapper">
+	<div class="wrapper" id="home">
 		<div class="header">
 			<div class="header__left">
 				<a href="/">
@@ -70,11 +70,11 @@
 				<ul>
 					<a href="/"><li>HOME</li></a>
 					<a href="/"><li>ABOUT</li></a>
-					<a href="/"><li>SERVICES</li></a>
+
 					<a href="/"><li>PROJECTS</li></a>
-					<a href="/"><li>CAREER</li></a>
+
 					<a href="/"><li>CONTACT</li></a>
-					<a href="/"><li>LOG IN</li></a>
+
 				</ul>
 			</div>
 			<!-- taking out the image right here -->
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 
-		<div class="services">
+		<div class="services" id="about">
 			<div class="first">
 				<div class="first__text">
 					<h2>A LITTLE ABOUT US</h2>
@@ -191,25 +191,25 @@
 
 		<!-- end new code  -->
 
-		<div class="projects">
+		<div class="projects" id="projects">
 			<h2 class="text-center">PROJECTS</h2>
 			<div class="projects__content">
 				<div class="projects__content--left">
 					<!-- <div class="projects__content--left--border"></div> -->
 					<div class="projects__content--left--image clifftop">
-						<img src="gallery/clifftop2.jpg" alt="projects__left.webp">
+						<img src="gallery/cliffnew.png" alt="projects__left.webp">
 					</div>
 					<div class="projects__content--left--text">
 						<a href="/"><h3>CLIFF TOP</h3></a>
 						<hr>
 						<p>Two and three room beautiful apartments in Kohsar with available parking provided to the residents. Cliff Top aims to give you the best location for your home at an afforable price.</p>
-						<button>UPCOMING</button>
+						<button>COMPLETED</button>
 					</div>
 				</div>
 				<div class="projects__content--right">
 					<!-- <div class="projects__content--right--border"></div> -->
 					<div class="projects__content--right--image">
-						<img class="shiftleft" src="Gallery/tulip2.jpg" alt="projects__right.webp">
+						<img class="shiftleft" src="Gallery/tulipnew.png" alt="projects__right.webp">
 					</div>
 					<div class="projects__content--right--text">
 						<a href="/"><h3>TULIP TOWER</h3></a>
@@ -227,7 +227,7 @@
 				<div class="projects__content--left">
 					<!-- <div class="projects__content--left--border"></div> -->
 					<div class="projects__content--left--image clifftop">
-						<img src="gallery/clifftop2.jpg" alt="projects__left.webp">
+						<img src="gallery/OASIS.jpg" alt="projects__left.webp">
 					</div>
 					<div class="projects__content--left--text">
 						<a href="/"><h3>OASIS APARTMENTS</h3></a>
@@ -239,7 +239,7 @@
 				<div class="projects__content--right">
 					<!-- <div class="projects__content--right--border"></div> -->
 					<div class="projects__content--right--image">
-						<img class="shiftleft" src="Gallery/tulip2.jpg" alt="projects__right.webp">
+						<img class="shiftleft" src="Gallery/royalres.jpeg" alt="projects__right.webp">
 					</div>
 					<div class="projects__content--right--text">
 						<a href="/"><h3>ROYAL RESIDENCY</h3></a>
@@ -258,7 +258,7 @@
 				<div class="projects__content--left">
 					<!-- <div class="projects__content--left--border"></div> -->
 					<div class="projects__content--left--image clifftop">
-						<img src="gallery/clifftop2.jpg" alt="projects__left.webp">
+						<img src="gallery/Bungalow.jpg" alt="projects__left.webp">
 					</div>
 					<div class="projects__content--left--text">
 						<a href="/"><h3>BUNGALOWS</h3></a>
@@ -270,7 +270,7 @@
 				<div class="projects__content--right">
 					<!-- <div class="projects__content--right--border"></div> -->
 					<div class="projects__content--right--image">
-						<img class="shiftleft" src="Gallery/tulip2.jpg" alt="projects__right.webp">
+						<img class="shiftleft" src="Gallery/kohicon.jpeg" alt="projects__right.webp">
 					</div>
 					<div class="projects__content--right--text">
 						<a href="/"><h3>KOHSAR ICON</h3></a>
@@ -307,7 +307,7 @@
 
 		<!-- code end  -->
 
-		<div class="contact">
+		<div class="contact" id="contact">
 			<h3>
 				Have any questions about our work?
 			</h3>
@@ -316,12 +316,10 @@
 		<footer class="footer">
 			<div class="footer__menu">
 				<ul>
-					<a href="/"><li>HOME</li></a>
-					<a href="/"><li>ABOUT</li></a>
-					<a href="/"><li>SERVICES</li></a>
-					<a href="/"><li>PROJECTS</li></a>
-					<a href="/"><li>CAREER</li></a>
-					<a href="/"><li>CONTACT</li></a>
+					<a href="#home"><li>HOME</li></a>
+					<a href="#about"><li>ABOUT</li></a>
+					<a href="#projects"><li>PROJECTS</li></a>
+					<a href="#contact"><li>CONTACT</li></a>
 				</ul>
 			</div>
 			
